# cors-allow-list-rust

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
infra/lib/: main-stack.ts
infra/lib/functions/: cors-function-construct.ts
test-events/: api-1.json  lower-case-origin.json  vars.json
